# kiosque

./: .gitignore  README  README.md  kiosque.spec  meson.build  org.kiosque.Kiosque.desktop  org.kiosque.Kiosque.json  resources.qrc
.github/workflows/: ci.yml
po/: LINGUAS  POTFILES  fr.po  it.po  meson.build  pt.po  pt_PT.po
qml/: Main.qml
qml/components/: AppCard.qml  AppOfTheDayCard.qml  CategoryChip.qml  FeatureCard.qml  HeroCarousel.qml  HorizontalAppList.qml  ProgressOverlay.qml  RatingSummary.qml  ReviewCard.qml  WelcomeCard.qml
qml/pages/: AppDetailPage.qml  CategoriesPage.qml  CategoryAppListPage.qml  InstalledPage.qml  SettingsPage.qml  ShopfrontPage.qml  TestPage.qml
rust/: .qmlls.ini  Cargo.toml  build.rs
rust/src/: cache.rs  disk_cache.rs  image_cache.rs  image_registry.rs  lib.rs  log.rs  runtime.rs  settings.rs
rust/src/bridge/: app_list_model.rs  featured_model.rs  installed_model.rs  mod.rs  repo_model.rs  settings_controller.rs  store_controller.rs  util.rs
rust/src/flathub/: client.rs  error.rs  mod.rs  oauth.rs  odrs.rs  types.rs
rust/src/flatpak/: cli.rs  dbus.rs  mod.rs
src/: main.cpp  update_main.cpp
