project('kiosque', 'cpp',
  version: run_command('python3', '-c', 'import subprocess; s=subprocess.run(["git", "describe", "--tags"], capture_output=True, text=True); print(s.stdout.strip().lstrip("v") if s.returncode == 0 and s.stdout.strip() else "0.8")', check: true).stdout().strip(),
  default_options: ['cpp_std=c++17']
)

qt6 = import('qt6')

# Dependencies
qt_deps = dependency('qt6', modules: ['Core', 'Gui', 'Qml', 'Quick', 'QuickControls2', 'DBus', 'Widgets'])
kirigami_dep = dependency('KF6Kirigami')
dbus_dep = dependency('dbus-1', required: false)
ki18n_dep = dependency('KF6I18n', method: 'cmake', modules: ['KF6::I18n'])
ki18n_qml_dep = dependency('KF6I18n', method: 'cmake', modules: ['KF6::I18nQml'])


cargo = find_program('cargo')

is_release = get_option('buildtype') == 'release'
cargo_profile = is_release ? 'release' : 'debug'
cargo_target_dir = meson.current_build_dir() / 'cargo_target'
manifest_path = meson.current_source_dir() / 'rust/Cargo.toml'

if is_release
  cargo_cmd = [
    'sh', '-c',
    'env CARGO_TARGET_DIR="$1" "$2" build --manifest-path "$3" --release && cp "$1/$4/libkiosque.a" "$5"',
    'sh', cargo_target_dir, cargo.full_path(), manifest_path, cargo_profile, '@OUTPUT@'
  ]
else
  cargo_cmd = [
    'sh', '-c',
    'env CARGO_TARGET_DIR="$1" "$2" build --manifest-path "$3" && cp "$1/$4/libkiosque.a" "$5"',
    'sh', cargo_target_dir, cargo.full_path(), manifest_path, cargo_profile, '@OUTPUT@'
  ]
endif

rust_lib = custom_target(
  'cargo-build',
  build_by_default: true,
  build_always_stale: true,
  output: 'libkiosque.a',
  console: true,
  command: cargo_cmd
)

# Declare a dependency on the Rust static library
# Note: Since the library includes Qt code generated by cxx-qt, we must link it properly.
rust_dep = declare_dependency(
  link_with: rust_lib
)

qrc_files = qt6.compile_resources(sources: 'resources.qrc')

subdir('po')

# Preprocess Qt files
update_daemon_moc = qt6.preprocess(
  moc_sources: ['src/update_main.cpp']
)

# Application executable
executable('kiosque',
  sources: ['src/main.cpp', qrc_files],
  dependencies: [qt_deps, kirigami_dep, rust_dep, dbus_dep, ki18n_dep, ki18n_qml_dep],
  cpp_args: [
    '-DTRANSLATION_DOMAIN="kiosque"',
    '-DPROJECT_VERSION="' + meson.project_version() + '"'
  ],
  install: true
)

executable('kiosque-update',
  sources: ['src/update_main.cpp', update_daemon_moc],
  dependencies: [qt_deps, rust_dep, dbus_dep, ki18n_dep],
  cpp_args: [
    '-DTRANSLATION_DOMAIN="kiosque"',
    '-DPROJECT_VERSION="' + meson.project_version() + '"'
  ],
  install: true
)

install_data('org.kiosque.Kiosque.desktop',
  install_dir: get_option('datadir') / 'applications'
)

install_data('qml/images/logo.svg',
  rename: 'org.kiosque.Kiosque.svg',
  install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps'
)

