[package]
name = "libkiosque"
version = "0.1.0"
edition = "2024"
authors = ["Kiosque Contributors"]
description = "Rust backend for the Kiosque Flatpak storefront"

[lib]
name = "kiosque"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["full"] }

# Async runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }

# HTTP client for Flathub API
reqwest = { version = "0.13.4", features = ["json", "rustls", "form"], default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Error Handling
thiserror = "2.0.18"

# D-Bus (Flatpak availability check, signal monitoring)
zbus = { version = "5.16.0", features = ["tokio"] }
dirs = "6.0.0"
chrono = "0.4.45"

# Caching & Cryptography for ODRS
moka = { version = "0.12.15", features = ["future"] }
sha2 = "0.11.0"
hmac = "0.13.0"
rand = "0.10.1"


[build-dependencies]
cxx-qt-build = "0.8.1"

